# CLM-Harvest

./: environment.yml  pyproject.toml  requirements.txt  requirements_extra.txt
retromol/: matching_rules.yml
scripts/: 001_collect_compounds.py  002_eval_and_prep_unconditionally_generated.py  003_eval_and_prep_retromol_results.py  eval_and_prep_unconditionally_generated.py  plot_loss.py
src/harvest/: cli.py  loader.py  logging.py  retromol.py  sampling.py
workflow/config/: config_unconditional_harvest.yaml  config_unconditional_harvest_v1a.yaml  config_unconditional_harvest_v1b.yaml  config_unconditional_harvest_v2.yaml  config_unconditional_harvest_v3.yaml  config_unconditional_harvest_v4.yaml  config_unconditional_harvest_v5.yaml
